# ms-data-EcologyLetters-2005

./: .gitignore  README.md
aniche/: .gitignore  E-J.py  J-input.txt  J-input2.txt  J-slice.py  J-sum.txt  Makefile  Makefile.win  dws_getopt.cpp  dws_getopt.h  dws_math.h  dws_numerical.cpp  dws_numerical.h  main.cpp
aniche/040929/: J-sum-final.txt  J-sum3.txt  J-sum4.txt  e-stats.txt
aniche/param-scripts/: J-sum2.txt
kniche/: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README  _configure  authors  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.lineno  configure.scan  home_machine_flags  old_config.status
kniche/extras/: abund.py  input.txt  restimes2.py
kniche/scripts/: gen.py  readme  restimes.py
kniche/src/: .gitignore  Makefile  Makefile.am  Makefile.in  TChooseWeighted.cpp  TChooseWeighted.h  TEnvGenerator.cpp  TEnvGenerator.h  TEnvironment.cpp  TEnvironment.h  TLandscape.cpp  TLandscape.h  TOption.cpp  TOption.h  TPlant.cpp  TPlant.h  TPlantVector.cpp  TPlantVector.h  TPopGenerator.cpp  TPopGenerator.h  TPopulation.cpp  TPopulation.h  TRun.cpp  TRun.h  TSpeciesPool.cpp  TSpeciesPool.h  example.txt  fexample.txt  kniche  lout.txt  ltest.txt  main.cpp  mainpage.h  nichedefs.h  ptest.txt  tags
kniche/src/dws/: Makefile  Makefile.am  Makefile.in  dws_fourier.h  dws_fractal.h  dws_getopt.cpp  dws_getopt.h  dws_stlstats.h  fractal-test.cpp  tags
kniche/src/scripts/: gen-E.py  gen-J.py  gen-fractal.py  gen.py  real-sim.py  restimes.py  rsa.py  trans-res-div.py
